syntax = "proto3";

package second.protos;

message VoxelGenerator{
    repeated float voxel_size = 1;
    repeated float point_cloud_range = 2;
    uint32 max_number_of_points_per_voxel = 3;
    // uint32 max_voxels = 4; // limit GPU memory usage
    bool submanifold_group = 4;
    repeated uint32 submanifold_size = 5;
    uint32 submanifold_max_points = 6;
}
